--- a/index.html
+++ b/index.html
@@ -2,178 +2,181 @@
 
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+<head>
+	<meta charset="utf-8">
 
-		<title>Josh Walker Games</title>
+	<title>Josh Walker Games</title>
 
-		<link rel="stylesheet" href="stylesheet.css">
-	
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-	
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
-	</head>
-	
-	<body>
-		
-		<header>
-			<h1>Josh Walker Games</h1>
-		</header>
-		
-		<article id=about-me>
-			<h2>- - - About Me - - -</h2>
+	<link rel="stylesheet" href="stylesheet.css">
 
-			<p>
-				Hi! My name's Josh and I'm a solo indie developer from the UK.
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-				I mostly take part in game jams, but maybe in the future you'll see something bigger from me...
-				I've done a couple jams now and one bigger project as part of my A Levels. I try to make games that are fun to play but I mean half the time I screw up so I'm gonna keep my old projects up so you guys can see the progress I've made (or not I dunno)
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+	<header>
+		<h1>Josh Walker Games</h1>
+	</header>
+
+	<article id=about-me>
+		<h2>- - - About Me - - -</h2>
+
+		<p>
+			Hi! My name's Josh and I'm a solo indie developer from the UK.
+
+			I mostly take part in game jams, but maybe in the future you'll see something bigger from me...<br>
+			I've done a couple jams now and some bigger longer term projects. I try to make games that are fun to play and have interesting ideas and mechanics
+			behind them, even if they aren't executed perfectly. I'm going to keep my old projects up so you can see the progress I've made and the
+			ideas behind some of my less polished games.
+		</p>
+
+	</article>
+
+	<article id=projects>
+		<h2 style="margin-top: 0;"> - - - Projects - - -</h2>
+
+		<!-- Origame -->
+		<div class=game style="background-color: #000000;">
+			<h4 style="color: white;">Origame</h4>
+
+			<p style="color: white;">
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+				This game is my first published long-term project. Origame was a project I made for my A Level Computer Science course. I had to learn how to
 			</p>
 
-		</article>
-		
-		<article id=projects>
-			<h2 style="margin-top: 0;"> - - - Projects - - -</h2>
+			<img style="height: 90%; width: auto; right: 6rem" ; src="Assets/IconItch.png">
 
-	<!-- Origame -->
-			<div class=game style="background-color: #000000;">
-				<h4 style="color: white;">Origame</h4>
+			<iframe frameborder="0" src="https://itch.io/embed/1339463?bg_color=0e0e0e&amp;fg_color=ffffff&amp;link_color=c8c8c8&amp;border_color=3e3e3e" width="552" height="167">
+				<a href="https://joshwalker.itch.io/origame">Origame by Josh Walker</a>
+			</iframe>
+		</div>
 
-				<p style="color: white;">
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-				</p>
+		<div class="line"></div>
 
-				<img style="height: 90%; width: auto; right: 6rem" ; src="Assets/IconItch.png">
+		<!-- Painball -->
+		<div class=game style="background-color: #069ED8;">
+			<h4>Painball</h4>
 
-				<iframe frameborder="0" src="https://itch.io/embed/1339463?bg_color=0e0e0e&amp;fg_color=ffffff&amp;link_color=c8c8c8&amp;border_color=3e3e3e" width="552" height="167">
-					<a href="https://joshwalker.itch.io/origame">Origame by Josh Walker</a>
+			<p>
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+				A Foddian pinball-platformer made for <a href="https://itch.io/jam/ludwig-2021" target="_blank"> Ludwig Jam 2021</a>
+			</p>
+
+			<div class=video style="right: -2rem; top: 2.75rem; width: 50%; height: auto;">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/PA-HIFpP6Io" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+
+			<div class=itchio-embed>
+				<iframe frameborder="0" src="https://itch.io/embed/1248951?bg_color=222222&amp;fg_color=ff8116&amp;link_color=ff2f93&amp;border_color=363636" width="552" height="167">
+					<a href="https://joshwalker.itch.io/painball">
+						Painball by Josh Walker
+					</a>
 				</iframe>
 			</div>
 
-			<div class="line"></div>
-			
-	<!-- Painball -->
-			<div class=game style="background-color: #069ED8;">
-				<h4>Painball</h4>
+		</div>
 
-				<p>
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-					A Foddian pinball-platformer made for <a href="https://itch.io/jam/ludwig-2021" target="_blank"> Ludwig Jam 2021</a>
-				</p>
+		<div class="line"></div>
 
-				<div class=video style="right: -2rem; top: 2.75rem; width: 50%; height: auto;">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/PA-HIFpP6Io" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
+		<!-- Hexatris -->
+		<div class=game style="background-color: #A1FFFF;">
+			<h4>Hexatris</h4>
 
-				<div class=itchio-embed>
-					<iframe frameborder="0" src="https://itch.io/embed/1248951?bg_color=222222&amp;fg_color=ff8116&amp;link_color=ff2f93&amp;border_color=363636" width="552" height="167">
-						<a href="https://joshwalker.itch.io/painball">
-							Painball by Josh Walker
-						</a>
-					</iframe>
-				</div>
+			<p>
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
+				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+			</p>
 
+			<img src="Assets/hexatris.png">
+
+			<div class=itchio-embed>
+				<iframe frameborder="0" src="https://itch.io/embed/1222176?bg_color=222222&amp;fg_color=3cba33&amp;link_color=e6bf9e&amp;border_color=363636" width="552" height="167">
+					<a href="https://joshwalker.itch.io/hexatris">Hexatris by Josh Walker</a>
+				</iframe>
 			</div>
-			
-			<div class="line"></div>
-			
-	<!-- Hexatris -->
-			<div class=game style="background-color: #A1FFFF;">
-				<h4>Hexatris</h4>
+		</div>
 
-				<p>
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-					Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
-				</p>
+		<div class="line"></div>
 
-				<img src="Assets/hexatris.png">
+		<!-- Balls in Holes -->
+		<div class=game style="background-color: #74C6D6; ">
+			<h4>Balls in Holes</h4>
 
-				<div class=itchio-embed>
-					<iframe frameborder="0" src="https://itch.io/embed/1222176?bg_color=222222&amp;fg_color=3cba33&amp;link_color=e6bf9e&amp;border_color=363636" width="552" height="167">
-						<a href="https://joshwalker.itch.io/hexatris">Hexatris by Josh Walker</a>
-					</iframe>
-				</div>
+			<p>
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
+				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+			</p>
+
+			<img src="Assets/ballinholes2.png">
+
+			<div class=itchio-embed>
+				<iframe frameborder="0" src="https://itch.io/embed/1166980?bg_color=222222&amp;fg_color=38d370&amp;link_color=e02525&amp;border_color=363636" width="552" height="167"><a href="https://joshwalker.itch.io/ballsinholes">Balls in Holes by Josh Walker</a></iframe>
 			</div>
-			
-			<div class="line"></div>
-			
-	<!-- Balls in Holes -->
-			<div class=game style="background-color: #74C6D6; ">
-				<h4>Balls in Holes</h4>
 
-				<p>
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-					Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
-				</p>
+		</div>
 
-				<img src="Assets/ballinholes2.png">
+		<div class="line"></div>
 
-				<div class=itchio-embed>
-					<iframe frameborder="0" src="https://itch.io/embed/1166980?bg_color=222222&amp;fg_color=38d370&amp;link_color=e02525&amp;border_color=363636" width="552" height="167"><a href="https://joshwalker.itch.io/ballsinholes">Balls in Holes by Josh Walker</a></iframe>
-				</div>
+		<!-- It's so aMAZEing -->
+		<div class=game style="background-color: black; ">
+			<h4 style="color: white;">It's so aMAZEing</h4>
 
+			<p style="color: white;">
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
+				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+			</p>
+
+			<img style="height: 90%; width: auto; right: 6rem" ; src="Assets/amazeing.png">
+
+			<div class=itchio-embed>
+				<iframe frameborder="0" src="https://itch.io/embed/1147326?bg_color=222222&amp;fg_color=cd3624&amp;link_color=630b0b&amp;border_color=363636" width="552" height="167">
+					<a href="https://joshwalker.itch.io/itssoamazeing">It's So aMAZEing by Josh Walker</a>
+				</iframe>
 			</div>
-			
-			<div class="line"></div>
-			
-	<!-- It's so aMAZEing -->
-			<div class=game style="background-color: black; ">
-				<h4 style="color: white;">It's so aMAZEing</h4>
 
-				<p style="color: white;">
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-					Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
-				</p>
+		</div>
 
-				<img style="height: 90%; width: auto; right: 6rem" ; src="Assets/amazeing.png">
+		<div class="line"></div>
 
-				<div class=itchio-embed>
-					<iframe frameborder="0" src="https://itch.io/embed/1147326?bg_color=222222&amp;fg_color=cd3624&amp;link_color=630b0b&amp;border_color=363636" width="552" height="167">
-						<a href="https://joshwalker.itch.io/itssoamazeing">It's So aMAZEing by Josh Walker</a>
-					</iframe>
-				</div>
+		<!-- Zombusiness -->
+		<div class=game style="background-color: black;">
+			<h4 style="color: white;">None of your Zombusiness</h4>
 
+			<p style="color: white;">
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
+				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+			</p>
+
+			<img src="Assets/zombusiness.png">
+
+			<div class=itchio-embed>
+				<iframe frameborder="0" src="https://itch.io/embed/928787?bg_color=222222&amp;fg_color=2ab953&amp;link_color=c91414&amp;border_color=363636" width="552" height="167">
+					<a href="https://joshwalker.itch.io/none-of-your-zombusiness">None of Your Zombusiness by Josh Walker</a>
+				</iframe>
 			</div>
-			
-			<div class="line"></div>
-			
-	<!-- Zombusiness -->
-			<div class=game style="background-color: black;">
-				<h4 style="color: white;">None of your Zombusiness</h4>
 
-				<p style="color: white;">
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-					Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
-				</p>
+		</div>
 
-				<img src="Assets/zombusiness.png">
+		<div class="line"></div>
 
-				<div class=itchio-embed>
-					<iframe frameborder="0" src="https://itch.io/embed/928787?bg_color=222222&amp;fg_color=2ab953&amp;link_color=c91414&amp;border_color=363636" width="552" height="167">
-						<a href="https://joshwalker.itch.io/none-of-your-zombusiness">None of Your Zombusiness by Josh Walker</a>
-					</iframe>
-				</div>
+	</article>
 
-			</div>
-			
-			<div class="line"></div>
-		
-		</article>
+</body>
 
-		</body>
-		
-		</html>
+</html>
