--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 		<h2>- - - About Me - - -</h2>
 
 		<p>
-			Hi! My name's Josh and I'm a solo indie developer from the UK.
+			Hi! My name's Josh and I'm a solo indie developer from the UK.<br /><br />
 
-			I mostly take part in game jams, but maybe in the future you'll see something bigger from me...<br>
-			I've done a couple jams now and some bigger longer term projects. I try to make games that are fun to play and have interesting ideas and mechanics
-			behind them, even if they aren't executed perfectly. I'm going to keep my old projects up so you can see the progress I've made and the
-			ideas behind some of my less polished games.
+			I mostly take part in game jams, but maybe in the future you'll see something bigger from me...<br /><br />
+			
+			I've done a couple jams now and some bigger longer term projects. 
+			I try to make games that are fun to play and have interesting ideas and mechanics behind them, even if they aren't executed perfectly. 
+			I'm going to keep my old projects up so you can see the progress I've made and the ideas behind some of my less polished games.
 		</p>
 
 	</article>
@@ -44,8 +45,10 @@
 			<h4 style="color: white;">Origame</h4>
 
 			<p style="color: white;">
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-				This game is my first published long-term project. Origame was a project I made for my A Level Computer Science course. I had to learn how to
+				This game is my first published long-term project.<br /><br />
+				Origame was a project I made for my A Level Computer Science course - I had to learn how to: analyse the market for a game; research 
+				existing games within a similar genre; use UML to design complex systems accounting for concepts like cohesion and coupling; develop a
+				solution in measured iterations, reviewing each prototype with the client; and evaluate the project according to a success criteria.
 			</p>
 
 			<img style="height: 90%; width: auto; right: 6rem" ; src="Assets/IconItch.png">
@@ -62,8 +65,11 @@
 			<h4>Painball</h4>
 
 			<p>
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-				A Foddian pinball-platformer made for <a href="https://itch.io/jam/ludwig-2021" target="_blank"> Ludwig Jam 2021</a>
+				<!--"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."-->
+				<a href="https://itch.io/jam/ludwig-2021" target="_blank"> Ludwig Jam 2021</a> was a game jam hosted by Ludwig Ahgren, a popular streamer, 
+				and Ottomated, a developer known for CrewLink.
+				The theme was "Foddian", a genre that Bennett Foddy popularised - punishing games where a significant lack of progress is possible 
+				(for example: Getting Over It with Bennett Foddy, Jump King and Pogostuck).
 			</p>
 
 			<div class=video style="right: -2rem; top: 2.75rem; width: 50%; height: auto;">
