changed to black bg

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
 		<!-- Origame -->
 		<div class=game style="background-color: #000000;">
-			<h4 style="color: white;">Origame</h4>
+			<h4>Origame</h4>
 
-			<p style="color: white;">
+			<p>
 				This game is my first published long-term project.<br /><br />
 				Origame was a project I made for my A Level Computer Science course - I had to learn how to: analyse the market for a game; research 
 				existing games within a similar genre; use UML to design complex systems accounting for concepts like cohesion and coupling; develop a
@@ -57,8 +57,6 @@
 				<a href="https://joshwalker.itch.io/origame">Origame by Josh Walker</a>
 			</iframe>
 		</div>
-
-		<div class="line"></div>
 
 		<!-- Painball -->
 		<div class=game style="background-color: #069ED8;">
@@ -86,13 +84,11 @@
 
 		</div>
 
-		<div class="line"></div>
-
 		<!-- Hexatris -->
 		<div class=game style="background-color: #A1FFFF;">
-			<h4>Hexatris</h4>
+			<h4 style="color: black;">Hexatris</h4>
 
-			<p>
+			<p style="color: black;">
 				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -109,13 +105,11 @@
 			</div>
 		</div>
 
-		<div class="line"></div>
-
 		<!-- Balls in Holes -->
 		<div class=game style="background-color: #74C6D6; ">
-			<h4>Balls in Holes</h4>
+			<h4 style="color: black;">Balls in Holes</h4>
 
-			<p>
+			<p style="color: black;">
 				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -130,8 +124,6 @@
 			</div>
 
 		</div>
-
-		<div class="line"></div>
 
 		<!-- It's so aMAZEing -->
 		<div class=game style="background-color: black; ">
@@ -155,8 +147,6 @@
 
 		</div>
 
-		<div class="line"></div>
-
 		<!-- Zombusiness -->
 		<div class=game style="background-color: black;">
 			<h4 style="color: white;">None of your Zombusiness</h4>
@@ -178,8 +168,6 @@
 			</div>
 
 		</div>
-
-		<div class="line"></div>
 
 	</article>
 
