--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	<article id=about-me>
 		<h2>- - - About Me - - -</h2>
 
-		<p>
+		<p style="padding-left: 4em">
 			Hi! My name's Josh and I'm a solo indie developer from the UK.<br /><br />
 
-			I mostly take part in game jams, but maybe in the future you'll see something bigger from me...<br /><br />
+			I mostly take part in game jams, but maybe in the future you'll see some bigger projects.<br /><br />
 			
-			I've done a couple jams now and some bigger longer term projects. 
-			I try to make games that are fun to play and have interesting ideas and mechanics behind them, even if they aren't executed perfectly. 
+			I've done a couple jams now and some bigger longer term projects. <br />
+			I try to make games that are fun to play and have interesting ideas and mechanics behind them, even if they aren't executed perfectly.<br /> 
 			I'm going to keep my old projects up so you can see the progress I've made and the ideas behind some of my less polished games.
 		</p>
 
@@ -46,12 +46,12 @@
 
 			<p>
 				This game is my first published long-term project.<br /><br />
-				Origame was a project I made for my A Level Computer Science course - I had to learn how to: analyse the market for a game; research 
+				<strong>Origame</strong> was a project I made for my A Level Computer Science course - I had to learn how to: analyse the market for a game; research 
 				existing games within a similar genre; use UML to design complex systems accounting for concepts like cohesion and coupling; develop a
 				solution in measured iterations, reviewing each prototype with the client; and evaluate the project according to a success criteria.
 			</p>
 
-			<img style="height: 90%; width: auto; right: 6rem" ; src="Assets/IconItch.png">
+			<img style="height: 90%; width: auto; right: 4rem;", src="Assets/IconItch.png">
 
 			<iframe frameborder="0" src="https://itch.io/embed/1339463?bg_color=0e0e0e&amp;fg_color=ffffff&amp;link_color=c8c8c8&amp;border_color=3e3e3e" width="552" height="167">
 				<a href="https://joshwalker.itch.io/origame">Origame by Josh Walker</a>
@@ -59,18 +59,19 @@
 		</div>
 
 		<!-- Painball -->
-		<div class=game style="background-color: #069ED8;">
+		<div class=game style="background-color: #004B97;">
 			<h4>Painball</h4>
 
 			<p>
 				<!--"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."-->
 				<a href="https://itch.io/jam/ludwig-2021" target="_blank"> Ludwig Jam 2021</a> was a game jam hosted by Ludwig Ahgren, a popular streamer, 
-				and Ottomated, a developer known for CrewLink.
-				The theme was "Foddian", a genre that Bennett Foddy popularised - punishing games where a significant lack of progress is possible 
-				(for example: Getting Over It with Bennett Foddy, Jump King and Pogostuck).
+				and Ottomated, a developer known for CrewLink.<br /><br />
+				The theme was <strong>Foddian</strong>, a genre that Bennett Foddy popularised - punishing games where you can lose huge amounts of progress
+				(for example: Getting Over It with Bennett Foddy, Jump King and Pogostuck). 
+				<strong>Painball</strong> was created to be a frustrating version of pinball with these Foddian concepts built into it.
 			</p>
 
-			<div class=video style="right: -2rem; top: 2.75rem; width: 50%; height: auto;">
+			<div class=video style="right: -2rem; top: 3.5rem; width: 50%; height: auto;">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/PA-HIFpP6Io" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 
@@ -89,14 +90,14 @@
 			<h4 style="color: black;">Hexatris</h4>
 
 			<p style="color: black;">
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+				Ludum Dare is an infamous game jam - I'd heard of it even before becoming a developer, and <strong>Hexatris</strong> was my first 
+				attempt at participating.<br /><br />
+				<a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank">LD49</a> had the theme Unstable and so I built a small game
+				where the purpose was to keep these hexagonal pieces stacked perfectly on a plinth. One of my buggier games, maybe because Ludum Dare's
+				time frame was smaller than I was used to.
 			</p>
 
-			<img src="Assets/hexatris.png">
+			<img style="top: 3.5rem", src="Assets/hexatris.png">
 
 			<div class=itchio-embed>
 				<iframe frameborder="0" src="https://itch.io/embed/1222176?bg_color=222222&amp;fg_color=3cba33&amp;link_color=e6bf9e&amp;border_color=363636" width="552" height="167">
@@ -110,14 +111,14 @@
 			<h4 style="color: black;">Balls in Holes</h4>
 
 			<p style="color: black;">
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+				<a href="https://kenney.nl/assets" target="_blank">Kenney</a> is a talented and famous artist in the game dev community - their free asset 
+				packs mean that developers without the talent time or money to create their own assets can still make good-looking games.<br /><br />
+				This <a href="https://itch.io/jam/kenney-jam-2021" target="_blank">jam</a> was hosted by Kenney had the theme <strong>Rotation</strong>, 
+				and every entry had to use Kenney's assets.
+				<strong>Balls in Holes</strong> was originally developed for the jam, but as time run out I continued to develop it, adding levels and usability features.
 			</p>
 
-			<img src="Assets/ballinholes2.png">
+			<img style="top: 2rem;", src="Assets/ballinholes2.png">
 
 			<div class=itchio-embed>
 				<iframe frameborder="0" src="https://itch.io/embed/1166980?bg_color=222222&amp;fg_color=38d370&amp;link_color=e02525&amp;border_color=363636" width="552" height="167"><a href="https://joshwalker.itch.io/ballsinholes">Balls in Holes by Josh Walker</a></iframe>
@@ -130,11 +131,10 @@
 			<h4 style="color: white;">It's so aMAZEing</h4>
 
 			<p style="color: white;">
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+				Only my second published game, <strong>It's so aMAZEing</strong> carries on the tradition of my games having really shit puns for names.<br /><br />
+				This game was made for the <a href="https://itch.io/jam/lowrezjam-2021" target="_blank">LowRezJam 2021</a>, where the challenge is to
+				develop a fun game with any theme as long as the game window is 64x64 pixels.<br /><br />
+				This project was my first time using Unity to make a 3D game, and I began learning the 3D modelling software Blender during the jam.
 			</p>
 
 			<img style="height: 90%; width: auto; right: 6rem" ; src="Assets/amazeing.png">
@@ -152,14 +152,15 @@
 			<h4 style="color: white;">None of your Zombusiness</h4>
 
 			<p style="color: white;">
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Made for <a href="https://ldjam.com/events/ludum-dare/49/hexatris" target="_blank"> Ludum Dare 49 </a> with the theme unstable
-				Developed using Unity, Blender and with assets from <a href="https://kenney.nl/assets" target="_blank"> Kenney </a>
+				<strong>Zombusiness</strong> was my first (published) game!<br /><br />
+				It's obviously not a masterpiece, but for my first game published for my <a href="https://itch.io/jam/brackeys-5" target="_blank">first game jam</a>, I was and still am extremely proud. 
+				I set out with a bold idea I brainstormed with some friends, and built it up from there. 
+				I didn't manage to deliver on the idea I had formed, but I learnt so much about time management, sensible scope, and publishing to Itch.io.<br /><br />
+				It was the first time I could show friends something concrete I had built, something they could download and play, and the first time I
+				experienced my work giving someone (fleeting) moments of joy.
 			</p>
 
-			<img src="Assets/zombusiness.png">
+			<img style="top: 5rem;", src="Assets/zombusiness.png">
 
 			<div class=itchio-embed>
 				<iframe frameborder="0" src="https://itch.io/embed/928787?bg_color=222222&amp;fg_color=2ab953&amp;link_color=c91414&amp;border_color=363636" width="552" height="167">
