--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 
 	<title>Josh Walker Games</title>
+	<link rel = "icon" href ="Assets/favicon.ico" type = "image">
 
 	<link rel="stylesheet" href="stylesheet.css">
 
