--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 			I mostly take part in game jams, but maybe in the future you'll see some bigger projects.<br /><br />
 			
-			I've done a couple jams now and some bigger longer term projects. <br />
 			I try to make games that are fun to play and have interesting ideas and mechanics behind them, even if they aren't executed perfectly.<br /> 
 			I'm going to keep my old projects up so you can see the progress I've made and the ideas behind some of my less polished games.
 		</p>
@@ -65,14 +64,14 @@
 
 			<p>
 				<!--"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."-->
-				<a href="https://itch.io/jam/ludwig-2021" target="_blank"> Ludwig Jam 2021</a> was a game jam hosted by Ludwig Ahgren, a popular streamer, 
-				and Ottomated, a developer known for CrewLink.<br /><br />
+				<a href="https://itch.io/jam/ludwig-2021" target="_blank">Ludwig Jam 2021</a> was a game jam hosted by Ludwig Ahgren, a popular streamer, 
+				and Ottomated, a developer known for CrewLink, the Among Us proximity chat mod.<br /><br />
 				The theme was <strong>Foddian</strong>, a genre that Bennett Foddy popularised - punishing games where you can lose huge amounts of progress
 				(for example: Getting Over It with Bennett Foddy, Jump King and Pogostuck). 
 				<strong>Painball</strong> was created to be a frustrating version of pinball with these Foddian concepts built into it.
 			</p>
 
-			<div class=video style="right: -2rem; top: 3.5rem; width: 50%; height: auto;">
+			<div class=video style="right: -2rem; top: 4rem; width: 50%; height: auto;">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/PA-HIFpP6Io" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 
