Changed about me

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 	<article id=about-me>
 		<h2>- - - About Me - - -</h2>
 
-		<p style="padding-left: 4em">
+		<p style="width: 60%; padding-left: 20%; text-align: center">
 			Hi! My name's Josh and I'm a solo indie developer from the UK.<br /><br />
 
 			I mostly take part in game jams, but maybe in the future you'll see some bigger projects.<br /><br />
 			
-			I try to make games that are fun to play and have interesting ideas and mechanics behind them, even if they aren't executed perfectly.<br /> 
-			I'm going to keep my old projects up so you can see the progress I've made and the ideas behind some of my less polished games.
+			I try to make games that are fun to play and have interesting ideas and mechanics behind them, even if they aren't executed perfectly 
+			- I'm going to keep my old projects up so you can see the progress I've made and the ideas behind some of my less polished games.
 		</p>
 
 	</article>
